//
//  AccessibilityIdentifier.swift
//  MovieQuiz
//
//  Created by Artem Yaroshenko on 18.12.2025.
//

import Foundation

struct AccessibilityIdentifier {
    static let gameResults = "Game results"
}
